@@ -8,6 +8,8 @@ import java.text.SimpleDateFormat;
 import java.time.LocalDate;
 import java.util.*;
 
+// Classe définissant les clients de la BDD
+
 public class Usager {
 
     public Integer idUsager;
@@ -27,14 +29,11 @@ public class Usager {
 
         ResultSet rs = ps.executeQuery();
 
-        while (rs.next()){  // gives id oeuvre and idediteur
+        while (rs.next()){  // gives idOeuvre and idEditeur
             this.nom = rs.getString(2);
             this.prenom = rs.getString(3);
             this.mail = rs.getString(4);
             this.categorie = rs.getInt(5);
-
-            System.out.println(this.nom);
-
         }
 
         PreparedStatement ps1 = conn.prepareStatement("select * from  EMPRUNT WHERE `ID USAGER` = ?");
@@ -43,7 +42,6 @@ public class Usager {
         ResultSet rs1 = ps1.executeQuery();
         while (rs1.next()){
             Vector<String> ligne = new Vector<String>();
-            System.out.println(rs1.getInt(3));
             Livre livre = new Livre(rs1.getInt(3));
             ligne.add(livre.titre);
             ligne.add(livre.editeur);
@@ -57,11 +55,10 @@ public class Usager {
 
         ResultSet rs2 = ps2.executeQuery();
         this.nbFoisListeRouge = rs2.getInt(1);
-
         conn.close();
     }
 
-    public int supprimer(){
+    public int supprimer(){  // suppression d'un usager de la BDD
         int succes  = 0;
         try {
             Connection conn = DataBase.getConnection();
@@ -71,12 +68,12 @@ public class Usager {
             conn.close();
         }
         catch(Exception e){System.out.println(e);}
-
         return succes;
     };
 
     public boolean possibleEmprunt() {   // retourne un boolean indiquant si c'est possible pour un usager de faire un emprunt en fonction de la listeRouge et de sa catégorie
         int nb = new Categorie(this.categorie).nbMax;
+        Integer nbActuelEmprunts = 0;
         Integer nbActuelsEmprunts = 0;
         try {
             Connection conn = DataBase.getConnection();
@@ -85,16 +82,14 @@ public class Usager {
             ps.setString(2, "");
 
             ResultSet rs = ps.executeQuery();
-            Integer nbActuelEmprunts = rs.getInt(1);
-
+            nbActuelEmprunts = rs.getInt(1);
             conn.close();
         } catch (Exception e) {
             System.out.println(e);
         }
-        return (nb>nbActuelsEmprunts) && !(this.surLR());
-    }
+        return (nb>nbActuelsEmprunts) && !(this.surLR());}
 
-    public boolean surLR(){
+    public boolean surLR(){  // verifier si l'usager en question est sur liste rouge, et ne peut donc pas emprunter de livres
         try {
             Connection conn = DataBase.getConnection();
             PreparedStatement ps = conn.prepareStatement("select `ID Liste` from `ListeRouge/Usager` where `ID Usager` = ?");
@@ -105,6 +100,7 @@ public class Usager {
                 int idListe = rs.getInt(1);
                 PreparedStatement ps1 = conn.prepareStatement("select * from LISTEROUGE where `ID LISTEROUGE` = ?");
                 ps1.setInt(1, idListe);
+                System.out.println("idliste"+ idListe);
                 ResultSet rs1 = ps1.executeQuery();
 
                 while (rs1.next()){
@@ -113,48 +109,43 @@ public class Usager {
                     String date = df.format(new Date());
                     String[] finTableau = dateFin.split("/");
                     String[] currentTableau = date.split("/");
-                    Collections.reverse(List.of(finTableau));
-                    Collections.reverse(List.of(currentTableau));
+                    List<String> listft = Arrays.asList(finTableau);
+                    List<String> listct = Arrays.asList(currentTableau);
+                    Collections.reverse(listft);
+                    Collections.reverse(listct);
 
-                    if (Integer.valueOf(finTableau[0]) > Integer.valueOf(currentTableau[0])){
+                    if (Integer.valueOf(listft.get(0)) > Integer.valueOf(listct.get(0))){
                         return true;
                     }
-                    else if ((Integer.valueOf(finTableau[0]) == Integer.valueOf(currentTableau[0]))  )
+                    else if ((Integer.valueOf(listft.get(0)) == Integer.valueOf(listct.get(0)))  )
                             { if (Integer.valueOf(finTableau[1]) > Integer.valueOf(currentTableau[1]) ) {
                                     return true;}
 
-                            else if (Integer.valueOf(finTableau[1]) == Integer.valueOf(currentTableau[1])){
-                                if (Integer.valueOf(finTableau[2]) > Integer.valueOf(currentTableau[2]) ){
+                            else if (Integer.valueOf(listft.get(1)) == Integer.valueOf(listct.get(1))){
+                                if (Integer.valueOf(listft.get(2)) > Integer.valueOf(listct.get(2)) ){
                                         return true;}
                     }}}}
-
             conn.close();
         } catch (Exception e) {
             System.out.println(e);
         }
-        return false;
-    }
+        return false;}
 
     public String getPrenom() {
         return this.prenom;
     }
-
     public String getMail() {
         return mail;
     }
-
     public String getNom() {
         return nom;
     }
-
     public int getCategorie() {
         return categorie;
     }
-
     public Integer getIdUsager() {
         return idUsager;
     }
-
     public int getNbFoisListeRouge() {
         return nbFoisListeRouge;
     }
